tests/invalid/tuple_index_out_of_bounds/main.py
def run_case() -> None:
    t: tuple[int, int] = (1, 2)

    x: int = t[5]

if __name__ == "__main__":
    run_case()
